# Plugin-EOSBanManager

./: .gitignore  CMakeLists.txt  EOSBanManager.vcxproj  HANDOFF.md  README.md
config/: PluginInfo.json  config.example.json  config.json
include/: Database.h  Logger.h  Plugin.h
src/: Commands.cpp  Database.cpp  Hooks.cpp  Plugin.cpp  dllmain.cpp
